Added missing license headers

** Changed
Converted M2-Planet to use GNU style error message
Seed.M1 when built will now have the same checksum as M2-Planet self-hosted
Harmonized license headers

** Fixed
Fixed typo in file headers
Fixed version number to reflect current version
Thanks to akkartik several documentation issues were identified and fixed

** Removed

* 1.0 - 2018-08-26
** Added
Added more generic logic to lookup_type
Added prim_types to simply the task of reducing search space to primitives

** Changed
Reorganized Primitive expression evaluation
Reorganized Collect_local to better match implementation
Broke out process_break
Changed ordering in declare_function to reduce stack operations
Converted weird_string collection into a simpler form
Inlined 2 small stubs as breaking them out wouldn't help implementation
Reordered conditionals for easier implementation and reduced operations
Broke out OUT and FUNCTION to silence a single GCC warning
Moved required_match and line_error into cc_core.c and removed required_match.c
Relocated contents of test/functions to functions
Upgrades mescc-tools to 40537c0200ad28cd5090bc0776251d5983ef56e3 commit
Tweaked order for for, while and do loops to make them more in commone
Tweaked source to better match assembly
Simplify implementation order of logic
Simplifed the promote_type logic to a much breifer form
Broke out generally useful member lookup
Upgraded seed.M1 to be generated by cc_x86

** Fixed
Fixed detection of locals to screen out all non-primitive name space collisions
Checked in updated gcc function definition
Changed's numerate_number's behavior related to zeros
Improved error message to help debugging
Fixed bootstrap.sh to build a working M2-Planet binary

** Removed
Removed redundent steps in Recursive statement
Removed several redundent steps in Collect_arguments

* 0.3 - 2018-08-12
** Added
Added support for global intializers
Introduced base offset local and argument load/store