@@ -1,18 +1,18 @@
 /* Copyright (C) 2016 Jeremiah Orians
- * This file is part of stage0.
+ * This file is part of M2-Planet.
  *
- * stage0 is free software: you can redistribute it and/or modify
+ * M2-Planet is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  *
- * stage0 is distributed in the hope that it will be useful,
+ * M2-Planet is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
- * along with stage0.  If not, see <http://www.gnu.org/licenses/>.
+ * along with M2-Planet.  If not, see <http://www.gnu.org/licenses/>.
  */
 
 #include<stdlib.h>
