@@ -29,6 +29,7 @@ Harmonized license headers
 Fixed typo in file headers
 Fixed version number to reflect current version
 Thanks to akkartik several documentation issues were identified and fixed
+Corrected missed license headers
 
 ** Removed
 
